--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "devDependencies": {
     "prisma": "3.15.0",
     "ts-node": "10.8.1",
-    "typescript": "4.7.3"
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "dev": "ts-node ./script.ts"
