--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "script",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "prisma": "3.15.0",
     "ts-node": "10.8.1",
     "typescript": "4.7.3"
   },
   "scripts": {
-    "dev": "ts-node ./script.ts"
+    "dev": "ts-node src/index.ts"
   },
   "dependencies": {
-    "@prisma/client": "3.15.0"
+    "@prisma/client": "3.15.0",
+    "express": "^4.18.2"
   },
   "engines": {
     "node": ">=10.0.0"
